# pytest-hw-ncs

./: .gitignore  README.md  build.sh  conftest.py  esp-find.py  jori-pc.yml  nrf_rpc.py  playground.py  pytest.ini  sample_devconf.yml  zephyr-modules.cmake
ext_modules/modules/: modules.cmake
nrf_rpc_uart/: CMakeLists.txt  Kconfig
nrf_rpc_uart/include/: nrf_rpc_uart.h
nrf_rpc_uart/src/: nrf_rpc_uart.c
nrf_rpc_uart/zephyr/: module.yml
targettest/: setup.cfg  setup.py
targettest/targettest/: abstract_logger.py  abstract_transport.py  cbor.py  device.py  devkit.py  nrf_rpc.py  provision.py  rpc.py  rpc_channel.py  rpc_logger.py  rpc_packet.py  rtt_logger.py  uart_channel.py  uart_packet.py
targettest/targettest/packet_transport/: uart.py
targettest/targettest/target_logger/: interface.py  rpc.py  rtt.py
tests/bt_notify/: test_bt_notify.py
tests/bt_notify/fw/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  prj_nrf5340dk_nrf5340_cpuapp.conf  sysbuild.cmake  test_rpc_opcodes.h
tests/bt_notify/fw/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
tests/bt_notify/fw/child_image/: rpc_host.conf
tests/bt_notify/fw/src/: main.c  nih_rpc.c  nih_rpc.h  nih_rpc_log_backend.c  rpc_handler.c  rpc_handler.h
