#
# Copyright (c) 2022 Nordic Semiconductor
#
# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
#
cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(bt_notify)

target_sources(app PRIVATE
  src/main.c
  src/rpc_handler.c
  src/nih_rpc.c
  src/nih_rpc_log_backend.c
)

# Needed for rpc_opcodes.h
target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
src/)
